adde env and config to remove the harcoding

--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "crypto-playground",
-  "version": "0.1.0",
+  "name": "hypersign-explorer",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --mode production",
+    "dev": "vue-cli-service serve --mode staging",
+    "setEnv": "cp .env.staging .env",
     "build": "vue-cli-service build",
+    "build-stage": "vue-cli-service build --mode staging",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit",
     "predeploy": "npm run build",
