--- a/.env.staging
+++ b/.env.staging
@@ -1,9 +1,10 @@
 VUE_APP_TITLE="HyperSign Identity Explorer (staging)"
 VUE_APP_DESC="DID Explorer for Hypersign Identity network!"
-STUDIO_BASE_URL="http://localhost:9001/"
-NODE_SERVER_BASE_URL="http://localhost:5000/"
-NODE_SERVER_NETWORK_STATUS_EP="network/info"
-NODE_SERVER_SCHEMA_LIST_EP="api/schema/list"
-NODE_SERVER_SCHEMA_GET_EP="api/schema/get"
-
-
+VUE_APP_STUDIO_BASE_URL="http://localhost:9001/"
+VUE_APP_NODE_SERVER_BASE_URL="http://192.168.43.43:5000/"
+VUE_APP_NODE_SERVER_NETWORK_STATUS_EP="network/info"
+VUE_APP_NODE_SERVER_SCHEMA_LIST_EP="api/schema/list"
+VUE_APP_NODE_SERVER_SCHEMA_GET_EP="api/schema/get/"
+VUE_APP_NODE_SERVER_DID_LIST_EP="api/did/list"
+VUE_APP_NODE_SERVER_DID_CREATE_EP="api/did/create"
+VUE_APP_NODE_SERVER_DID_RERSOLVE_EP="api/did/resolve/"
