--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -9,9 +9,8 @@ WORKDIR /app
 ENV PATH /app/node_modules/.bin:$PATH
 COPY package*.json ./
 RUN npm install --silent
-COPY . .
+RUN npm install -g @vue/cli
 RUN rm -f .env*
-RUN npm run build
 CMD ["npm", "run", "serve"]
 
 
