--- a/.env.staging
+++ b/.env.staging
@@ -1,7 +1,7 @@
 VUE_APP_TITLE="HyperSign Identity Explorer (staging)"
 VUE_APP_DESC="DID Explorer for Hypersign Identity network!"
 VUE_APP_STUDIO_BASE_URL="http://localhost:9001/"
-VUE_APP_NODE_SERVER_BASE_URL="http://192.168.43.43:5000/"
+VUE_APP_NODE_SERVER_BASE_URL="http://localhost:5000/"
 VUE_APP_NODE_SERVER_NETWORK_STATUS_EP="network/info"
 VUE_APP_NODE_SERVER_SCHEMA_LIST_EP="api/schema/list"
 VUE_APP_NODE_SERVER_SCHEMA_GET_EP="api/schema/get/"
