--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "qrcode.vue": "^1.7.0",
     "sha.js": "^2.4.11",
     "vue": "^2.5.16",
+    "vue-recaptcha": "^1.3.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
