cleanupa and improved UI

--- a/.env.staging
+++ b/.env.staging
@@ -1,5 +1,6 @@
-VUE_APP_TITLE="HyperSign Identity Explorer (staging)"
+VUE_APP_TITLE="HyperSign Identity Explorer"
 VUE_APP_DESC="DID Explorer for Hypersign Identity network!"
+VUE_APP_VERSION="v1.0"
 VUE_APP_STUDIO_BASE_URL="http://localhost:9001/"
 VUE_APP_NODE_SERVER_BASE_URL="http://localhost:5000/"
 VUE_APP_NODE_SERVER_NETWORK_STATUS_EP="network/info"
