--- a/.env.staging
+++ b/.env.staging
@@ -1,4 +1,4 @@
-VUE_APP_TITLE="HyperSign Identity Explorer"
+VUE_APP_TITLE="Identity Explorer"
 VUE_APP_DESC="DID Explorer for Hypersign Identity network!"
 VUE_APP_VERSION="v1.0"
 VUE_APP_STUDIO_BASE_URL="http://localhost:9001/"
