--- a/.env.staging
+++ b/.env.staging
@@ -9,3 +9,4 @@ VUE_APP_NODE_SERVER_SCHEMA_GET_EP="api/schema/get/"
 VUE_APP_NODE_SERVER_DID_LIST_EP="api/did/list"
 VUE_APP_NODE_SERVER_DID_CREATE_EP="api/did/create"
 VUE_APP_NODE_SERVER_DID_RERSOLVE_EP="api/did/resolve/"
+VUE_APP_RECAPTCHA_SITE_KEY="re captcha site key"
