fixed route bug

--- a/.env.staging
+++ b/.env.staging
@@ -1,3 +1,4 @@
+NODE_ENV=production
 VUE_APP_TITLE=Identity Explorer
 VUE_APP_DESC=DID Explorer for Hypersign Identity network!
 VUE_APP_VERSION=v1.0
