--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-VUE_APP_TITLE=Hypersign Identity Explorer
+VUE_APP_TITLE=Explorer
 VUE_APP_DESC=Hypersign Blockchain Explorer
-VUE_APP_VERSION=v1.0
+VUE_APP_VERSION=devNet
 
 VUE_APP_STUDIO_BASE_URL=http://localhost:9001/
 VUE_APP_NODE_SERVER_BASE_URL=http://localhost:5000/
