--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "jvjr-build": "jvjr --build"
   },
   "dependencies": {
+    "@cosmjs/amino": "^0.27.1",
+    "@cosmjs/stargate": "^0.27.1",
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/free-regular-svg-icons": "^6.0.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
