showing list of tx in and out in exploere

--- a/.env
+++ b/.env
@@ -7,9 +7,9 @@ VUE_APP_NODE_SERVER_BASE_URL=http://localhost:5000/
 VUE_APP_RECAPTCHA_SITE_KEY=re captcha site key
 
 ## HID 
-VUE_APP_HID_NODE_RPC_EP = http://localhost:26657
-VUE_APP_HID_NODE_SOCKET_EP = ws://localhost:26657/websocket
-VUE_APP_HID_NODE_REST_EP = http://localhost:1318/
+VUE_APP_HID_NODE_RPC_EP = 'https://devnet.hypersign.id/node1/rpc/'
+VUE_APP_HID_NODE_SOCKET_EP = 'wss://devnet.hypersign.id/node1/ws/'
+VUE_APP_HID_NODE_REST_EP = 'https://devnet.hypersign.id/node1/rest/'
 
 
 
