--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
 VUE_APP_TITLE=Explorer
 VUE_APP_DESC=Hypersign Blockchain Explorer
-VUE_APP_VERSION=devNet
+VUE_APP_VERSION=Jagrat
 
 VUE_APP_STUDIO_BASE_URL=http://localhost:9001/
 VUE_APP_NODE_SERVER_BASE_URL=http://localhost:5000/
 VUE_APP_RECAPTCHA_SITE_KEY=re captcha site key
 
 ## HID 
-VUE_APP_HID_NODE_RPC_EP = 'https://devnet.hypersign.id/node1/rpc/'
-VUE_APP_HID_NODE_SOCKET_EP = 'wss://devnet.hypersign.id/node1/ws/'
-VUE_APP_HID_NODE_REST_EP = 'https://devnet.hypersign.id/node1/rest/'
+VUE_APP_HID_NODE_RPC_EP = 'https://jagrat.hypersign.id/node1/rpc/'
+VUE_APP_HID_NODE_SOCKET_EP = 'wss://jagrat.hypersign.id/node1/ws/'
+VUE_APP_HID_NODE_REST_EP = 'https://jagrat.hypersign.id/node1/rest/'
 
 
 
